# itb

./: .codecov.yml  .gitignore  BENCH.md  BENCH3.md  FEATURES.md  HARNESS.md  HWTHREATS.md  ITB.md  ITB3.md  PROOFS.md  README.md  REDTEAM.md  SATHARNESS.md  SCIENCE.md  SECURITY.md  aliases.go  aliases_test.go  areion.go  areion_amd64.go  areion_arm64.go  areion_other.go  areion_test.go  auth.go  auth128.go  auth256.go  auth512.go  auth_errors.go  bitbyte_test.go  bitsoup.go  bitsoup_test.go  blob.go  blob_test.go  bytelevel.go  bytepool.go  cobs.go  config.go  config_test.go  doc.go  easy_ext_test.go  go.mod  (+33 more)
bindings/cpp/: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  check_header.sh  run_bench.sh  run_tests.sh  sync_header.sh
bindings/cpp/bench/: BENCH.md  README.md  bench_single.cpp  bench_single_stream.cpp  bench_triple.cpp  bench_triple_stream.cpp  bench_wrapper.cpp  common.hpp
bindings/cpp/eitb/: eitb.cpp
bindings/cpp/include/: itb.h  itb.hpp
bindings/cpp/tests/: test_aescmac.cpp  test_areion.cpp  test_attach_lock_seed.cpp  test_auth.cpp  test_blake2b.cpp  test_blake2s.cpp  test_blake3.cpp  test_blob128.cpp  test_blob256.cpp  test_blob512.cpp  test_blob_errors.cpp  test_blob_modes.cpp  test_blob_options.cpp  test_chacha20.cpp  test_chunk_size.cpp  test_closed_state.cpp  test_config.cpp  test_easy.cpp  test_easy_aescmac.cpp  test_easy_areion.cpp  test_easy_auth.cpp  test_easy_blake2b.cpp  test_easy_blake2s.cpp  test_easy_blake3.cpp  test_easy_chacha20.cpp  test_easy_mixed.cpp  test_easy_nonce_sizes.cpp  test_easy_persistence.cpp  test_easy_roundtrip.cpp  test_easy_siphash24.cpp  test_easy_streams.cpp  test_easy_streams_auth.cpp  test_easy_version_too_new.cpp  (+11 more)
(+694 files in other folders)
